--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile2.jpg"
   name             : "James Cemre Baybaş"
   pronouns         : "any pronouns"
   bio              : "Linguistics PhD student at the University of Michigan. EN, TR"
