--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile2.jpg"
   name             : "James Cemre Baybaş"
   pronouns         : "any pronouns"
-  bio              : "Linguistics PhD student at the University of Michigan. EN, TR"
+  bio              : "Linguistics PhD student and instructor."
   location         : "Ann Arbor, MI"
   employer         : "University of Michigan"
   uri              : # URL
