--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile2.jpg"
   name             : "James Cemre Baybaş"
   pronouns         : "any pronouns"
-  bio              : "Linguistics PhD student and instructor at University of Michigan."
+  bio              : "Linguistics PhD student and instructor at University of Michigan. \n🇹🇷🇺🇸"
   location         : "Ann Arbor, MI"
   employer         : "University of Michigan"
   uri              : # URL
