--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   # Biographic information
   avatar           : "profile2.jpg"
   name             : "James Cemre Baybaş"
-  pronouns         : "any pronouns"
-  bio              : "Linguistics PhD student and instructor at University of Michigan. 🇹🇷 🇺🇸 🏳️‍⚧️"
+  pronouns         : "any pronouns ⚧"
+  bio              : "Linguistics PhD student and instructor at University of Michigan. 🇹🇷 🇺🇸"
   location         : "Ann Arbor, MI"
   employer         : "University of Michigan"
   uri              : # URL
