--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile2.jpg"
+  avatar           : "profile3.jpeg"
   name             : "James Cemre Baybaş"
   pronouns         : "any pronouns ⚧"
   bio              : "Linguistics PhD student and instructor at University of Michigan. 🇹🇷 🇺🇸"
